--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ h1 {
 .calc-body {
     display: grid;
     grid-template-columns: 100px 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: 25px 100px 100px 100px 100px 100px 100px;
     grid-auto-flow: row;
     font: 100 32px 'Roboto', sans-serif;
     text-align: center;
@@ -16,13 +16,23 @@ h1 {
 .display {
     background-color: #142f44;
     color: white;
-    font-size: 72px;
+    font-size: 48px;
+    grid-column: 1 / 5;
+    grid-row: 2;
+    text-align: right;
+    border-right: 1px solid black;
+    padding: 21px 0;
+}
+
+.s-display {
+    background-color: #142f44;
+    color: white;
+    font-size: 20px;
+    text-align: right;
     grid-column: 1 / 5;
     grid-row: 1;
-    text-align: right;
     border-top: 1px solid black;
     border-right: 1px solid black;
-    padding: 7px 0;
 }
 
 .button {
@@ -32,14 +42,21 @@ h1 {
     padding: 31px 0;
 }
 
+.disable {
+    background-color: black;
+    border-top: 1px solid black;
+    border-right: 1px solid black;
+}
+
 .color {
     background-color: #205b7a;
+    color: white;
 }
 
 .button-0 {
     background-color: #a2bbcf;
     grid-column: 1 / 3;
-    grid-row: 6;
+    grid-row: 7;
     border-top: 1px solid black;
     border-right: 1px solid black;
     padding: 31px 0;
