--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -17,8 +17,8 @@ h1 {
   background-clip: text;
 }
 
-.row {
-  margin: 50px 0;
+.bulbs {
+  margin: 50px 0 25px;
 }
 
 .power {
@@ -38,166 +38,258 @@ h1 {
   /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
 
-/* Variables */
-/* Mixins */
-@keyframes twinkle-bulb1 {
-  0% {
-    background-color: #a21309;
-    box-shadow: 0 0 0 0 #a21309;
-  }
-  50% {
-    background-color: #F44336;
-    box-shadow: 0 0 15px 5px #F44336;
-  }
-  100% {
-    background-color: #a21309;
-    box-shadow: 0 0 0 0 #a21309;
-  }
-}
-@keyframes twinkle-bulb2 {
-  0% {
-    background-color: #FF9800;
-    box-shadow: 0 0 15px 5px #FF9800;
-  }
-  50% {
-    background-color: #804c00;
-    box-shadow: 0 0 0 0 #804c00;
-  }
-  100% {
-    background-color: #FF9800;
-    box-shadow: 0 0 15px 5px #FF9800;
-  }
-}
-@keyframes twinkle-bulb3 {
-  0% {
-    background-color: #bba700;
-    box-shadow: 0 0 0 0 #bba700;
-  }
-  50% {
-    background-color: #FFEB3B;
-    box-shadow: 0 0 15px 5px #FFEB3B;
-  }
-  100% {
-    background-color: #bba700;
-    box-shadow: 0 0 0 0 #bba700;
-  }
-}
-@keyframes twinkle-bulb4 {
-  0% {
-    background-color: #4CAF50;
-    box-shadow: 0 0 15px 5px #4CAF50;
-  }
-  50% {
-    background-color: #255627;
-    box-shadow: 0 0 0 0 #255627;
-  }
-  100% {
-    background-color: #4CAF50;
-    box-shadow: 0 0 15px 5px #4CAF50;
-  }
-}
-@keyframes twinkle-bulb5 {
-  0% {
-    background-color: #08528d;
-    box-shadow: 0 0 0 0 #08528d;
-  }
-  50% {
-    background-color: #2196F3;
-    box-shadow: 0 0 15px 5px #2196F3;
-  }
-  100% {
-    background-color: #08528d;
-    box-shadow: 0 0 0 0 #08528d;
-  }
-}
-@keyframes twinkle-bulb6 {
-  0% {
-    background-color: #3F51B5;
-    box-shadow: 0 0 15px 5px #3F51B5;
-  }
-  50% {
-    background-color: #1e2756;
-    box-shadow: 0 0 0 0 #1e2756;
-  }
-  100% {
-    background-color: #3F51B5;
-    box-shadow: 0 0 15px 5px #3F51B5;
-  }
-}
-@keyframes twinkle-bulb7 {
-  0% {
-    background-color: #3f1048;
-    box-shadow: 0 0 0 0 #3f1048;
-  }
-  50% {
-    background-color: #9C27B0;
-    box-shadow: 0 0 15px 5px #9C27B0;
-  }
-  100% {
-    background-color: #3f1048;
-    box-shadow: 0 0 0 0 #3f1048;
-  }
-}
-.bulb1 {
-  animation-name: twinkle-bulb1;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+:root {
+  --twinkle-color-1: #F44336;
+  --twinkle-dark-color-1: #7A211B;
+  --blur-1: 20px;
+  --spread-1: 10px;
+  --twinkle-duration-1: 1s;
+  --twinkle-color-2: #FF9800;
+  --twinkle-dark-color-2: #7F4C00;
+  --blur-2: 20px;
+  --spread-2: 10px;
+  --twinkle-duration-2: 1s;
+  --twinkle-color-3: #FFEB3B;
+  --twinkle-dark-color-3: #7F751D;
+  --blur-3: 20px;
+  --spread-3: 10px;
+  --twinkle-duration-3: 1s;
+  --twinkle-color-4: #4CAF50;
+  --twinkle-dark-color-4: #263928;
+  --blur-4: 20px;
+  --spread-4: 10px;
+  --twinkle-duration-4: 1s;
+  --twinkle-color-5: #2196F3;
+  --twinkle-dark-color-5: #104c79;
+  --blur-5: 20px;
+  --spread-5: 10px;
+  --twinkle-duration-5: 1s;
+  --twinkle-color-6: #3F51B5;
+  --twinkle-dark-color-6: #1F285A;
+  --blur-6: 20px;
+  --spread-6: 10px;
+  --twinkle-duration-6: 1s;
+  --twinkle-color-7: #9C27B0;
+  --twinkle-dark-color-7: #4E1358;
+  --blur-7: 20px;
+  --spread-7: 10px;
+  --twinkle-duration-7: 1s;
 }
 
-.bulb2 {
-  animation-name: twinkle-bulb2;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-
-.bulb3 {
-  animation-name: twinkle-bulb3;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-
-.bulb4 {
-  animation-name: twinkle-bulb4;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-
-.bulb5 {
-  animation-name: twinkle-bulb5;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-
-.bulb6 {
-  animation-name: twinkle-bulb6;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-
-.bulb7 {
-  animation-name: twinkle-bulb7;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-
-/* Styles */
 .bulb {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   margin: auto;
-}
-
-.off {
   background-color: #252525;
   box-shadow: inset 1px 1px 3px #00000080;
+  cursor: pointer;
+}
+
+.twinkle-1 {
+  animation: twinkle-1 var(--twinkle-duration-1) ease-in-out infinite;
+}
+
+.twinkle-2 {
+  animation: twinkle-2 var(--twinkle-duration-2) ease-in-out infinite;
+}
+
+.twinkle-3 {
+  animation: twinkle-3 var(--twinkle-duration-3) ease-in-out infinite;
+}
+
+.twinkle-4 {
+  animation: twinkle-4 var(--twinkle-duration-4) ease-in-out infinite;
+}
+
+.twinkle-5 {
+  animation: twinkle-5 var(--twinkle-duration-5) ease-in-out infinite;
+}
+
+.twinkle-6 {
+  animation: twinkle-6 var(--twinkle-duration-6) ease-in-out infinite;
+}
+
+.twinkle-7 {
+  animation: twinkle-7 var(--twinkle-duration-7) ease-in-out infinite;
+}
+
+@keyframes twinkle-1 {
+  0% {
+    background-color: var(--twinkle-dark-color-1);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-1);
+  }
+  50% {
+    background-color: var(--twinkle-color-1);
+    box-shadow: 0 0 var(--blur-1) var(--spread-1) var(--twinkle-color-1);
+  }
+  100% {
+    background-color: var(--twinkle-dark-color-1);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-1);
+  }
+}
+@keyframes twinkle-2 {
+  0% {
+    background-color: var(--twinkle-color-2);
+    box-shadow: 0 0 var(--blur-2) var(--spread-2) var(--twinkle-color-2);
+  }
+  50% {
+    background-color: var(--twinkle-dark-color-2);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-2);
+  }
+  100% {
+    background-color: var(--twinkle-color-2);
+    box-shadow: 0 0 var(--blur-2) var(--spread-2) var(--twinkle-color-2);
+  }
+}
+@keyframes twinkle-3 {
+  0% {
+    background-color: var(--twinkle-dark-color-3);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-3);
+  }
+  50% {
+    background-color: var(--twinkle-color-3);
+    box-shadow: 0 0 var(--blur-3) var(--spread-3) var(--twinkle-color-3);
+  }
+  100% {
+    background-color: var(--twinkle-dark-color-3);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-3);
+  }
+}
+@keyframes twinkle-4 {
+  0% {
+    background-color: var(--twinkle-color-4);
+    box-shadow: 0 0 var(--blur-4) var(--spread-4) var(--twinkle-color-4);
+  }
+  50% {
+    background-color: var(--twinkle-dark-color-4);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-4);
+  }
+  100% {
+    background-color: var(--twinkle-color-4);
+    box-shadow: 0 0 var(--blur-4) var(--spread-4) var(--twinkle-color-4);
+  }
+}
+@keyframes twinkle-5 {
+  0% {
+    background-color: var(--twinkle-dark-color-5);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-5);
+  }
+  50% {
+    background-color: var(--twinkle-color-5);
+    box-shadow: 0 0 var(--blur-5) var(--spread-5) var(--twinkle-color-5);
+  }
+  100% {
+    background-color: var(--twinkle-dark-color-5);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-5);
+  }
+}
+@keyframes twinkle-6 {
+  0% {
+    background-color: var(--twinkle-color-6);
+    box-shadow: 0 0 var(--blur-6) var(--spread-6) var(--twinkle-color-6);
+  }
+  50% {
+    background-color: var(--twinkle-dark-color-6);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-6);
+  }
+  100% {
+    background-color: var(--twinkle-color-6);
+    box-shadow: 0 0 var(--blur-6) var(--spread-6) var(--twinkle-color-6);
+  }
+}
+@keyframes twinkle-7 {
+  0% {
+    background-color: var(--twinkle-dark-color-7);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-7);
+  }
+  50% {
+    background-color: var(--twinkle-color-7);
+    box-shadow: 0 0 var(--blur-7) var(--spread-7) var(--twinkle-color-7);
+  }
+  100% {
+    background-color: var(--twinkle-dark-color-7);
+    box-shadow: 0 0 0 0 var(--twinkle-dark-color-7);
+  }
+}
+.pallete {
+  margin-bottom: 10px;
+}
+
+.color {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  border: 1px solid #343a40;
+  margin: 0 5px 5px 0;
+}
+
+.red {
+  background-color: #F44336;
+}
+
+.pink {
+  background-color: #E91E63;
+}
+
+.purple {
+  background-color: #9C27B0;
+}
+
+.deep-purple {
+  background-color: #673AB7;
+}
+
+.indigo {
+  background-color: #3F51B5;
+}
+
+.blue {
+  background-color: #2196F3;
+}
+
+.light-blue {
+  background-color: #03A9F4;
+}
+
+.cyan {
+  background-color: #00BCD4;
+}
+
+.teal {
+  background-color: #009688;
+}
+
+.green {
+  background-color: #4CAF50;
+}
+
+.light-green {
+  background-color: #8BC34A;
+}
+
+.lime {
+  background-color: #CDDC39;
+}
+
+.yellow {
+  background-color: #FFEB3B;
+}
+
+.amber {
+  background-color: #FFC107;
+}
+
+.orange {
+  background-color: #FF9800;
+}
+
+.deep-orange {
+  background-color: #FF5722;
+}
+
+#intensity {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
