--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    font-family: sans-serif;
+    background: #364f6b;
+    color: #f5f5f5;
+}
+
 .layout {
     display: grid;
     column-gap: 8px;
@@ -11,5 +17,10 @@ ul {
 
 li {
     cursor: pointer;
-    margin: 8px 0;
+    padding: 8px;
+}
+
+li:hover {
+    background-color: #3fc1c9;
+    color: black;
 }
