--- a/slider-design/styles/carousel.css
+++ b/slider-design/styles/carousel.css
@@ -6,16 +6,20 @@
 
 .item {
     display: none;
+    opacity: 0;
 }
 
 .active {
     display: block;
+    opacity: 1;
+    animation: fade-in 0.5s ease-in-out;
 }
 
 .btn {
     position: absolute;
     cursor: pointer;
-    height: 100%;
+    top: 0;
+    bottom: 0;
     width: 10%;
     transition: opacity 0.3s ease-out;
     opacity: 0;
@@ -38,4 +42,9 @@
 
 .next:hover {
     opacity: 0.65;
+}
+
+@keyframes fade-in {
+    from { opacity: 0.67; }
+    to { opacity: 1; }
 }
