carousel 3d, no responsive yet

--- a/slider-design/styles/style.css
+++ b/slider-design/styles/style.css
@@ -12,6 +12,7 @@ img {
 }
 
 button {
+    cursor: pointer;
     border: none;
     background-color: none;
     outline: none;
@@ -21,7 +22,7 @@ button {
     margin: auto;
 }
 
-@media (min-width: 576px) { .container { width: 540px; } }
-@media (min-width: 768px) { .container { width: 720px; } }
-@media (min-width: 992px) { .container { width: 960px; } }
+@media (min-width: 576px)  { .container { width: 540px;  } }
+@media (min-width: 768px)  { .container { width: 720px;  } }
+@media (min-width: 992px)  { .container { width: 960px;  } }
 @media (min-width: 1200px) { .container { width: 1140px; } }
